src/styles/app.scss
@import 'variables';
$fa-font-path: "~font-awesome/fonts";
@import '~font-awesome/scss/font-awesome';

.app-container {
    display: flex;
    flex-direction: column;
    height:100%;

    .app-header {
        flex: 0 1 auto;
        height: 5em;
        background-image: url("../assets/reperio-color-band.png");
        background-color: white;
        background-size: cover;
        background-position: center top;
        width: 100%;
    }

    .app-root {
        flex: 1 1 auto;

        .app-main {
            display: flex;
            flex-direction: row;
        }
    }

    .app-footer {
        height: 40px;
        background-color: $primary-color;
        width: 100%;
    }
}

.group { 
    position:relative; 
    margin-bottom: 35px; 
    margin-left: 40px;
}

.inputMaterial	{
    font-size:18px;
    padding:10px 10px 10px 5px;
    display:block;
    width:300px;
    border:none;
    border-bottom:1px solid #757575;
}

.inputMaterial:focus 		{ 
    outline:none;
    border-bottom: none;
}

    /* LABEL ======================================= */

label {
    color:#999; 
    font-size:14px;
    font-weight:normal;
    position:absolute;
    pointer-events:none;
    left:5px;
    top:10px;
    transition:0.2s ease all; 
    -moz-transition:0.2s ease all; 
    -webkit-transition:0.2s ease all;
}
 

/* active state */
.inputMaterial:focus ~ label, .inputMaterial:valid ~ label {
    top:-20px;
    font-size:14px;
    color: #009688;
}

.bar 	{ position:relative; display:block; width:315px; }
.bar:before, .bar:after 	{
    content:'';
    height:2px; 
    width:0;
    bottom:1px; 
    position:absolute;
    background: #009688; 
    transition:0.2s ease all; 
    -moz-transition:0.2s ease all; 
    -webkit-transition:0.2s ease all;
}
.bar:before {
    left:50%;
}
.bar:after {
    right:50%; 
}

/* active state */
.inputMaterial:focus ~ .bar:before, .inputMaterial:focus ~ .bar:after {
    width:50%;
}

.app-content {
    width: 100%;
}

.icon {
    width: 16px;
    height: 16px;
    display: inline-block;
    background-size: 100% 100%;
    margin: 0 4px 0 2px;
}

.indent {
    height: 16px;
    display: inline-block;
}

.tree-item {
    cursor: pointer;
}

.tree-grid {
    width: 100%;

    .expand {
        background-color: $main-gray;
        width: 30px;
        text-align: center;
    }
    td {
        vertical-align: middle;
        height: 30px;
    }
}

table, th, td {
    border: 1px solid black;
}

.draggable-property {
    cursor: move;
}

.show-x-on-hover:hover .x {
    visibility: visible;
}
.show-x-on-hover:not(hover) .x, .show-x-on-hover-hidden .x {
    visibility: hidden;
}

.reperio-form-input {
    height: 30px;
    border: 2px solid $main-gray;
    padding: 4px;
    width: 200px;
}
.input-name {
    display: inline-block;
    background-color: $main-gray;
    line-height: 22px;
    padding: 4px;
    color: white;
    width: 110px;
}
.reperio-form-input:not(:focus) {
    background-color: $unfocused-input;
}
.reperio-form-input:focus {
    outline: none;
    background-color: white;
}
select.reperio-form-input:not(:disabled) {
    background-color: white;
}
.reperio-form-input:disabled {
    background-color: $disabled-input;
}

.reperio-form-panel {
    position: relative;
    width: 200px;
    height: 300px;

    .reperio-form-panel-input-wrap {
        visibility: hidden;
    }
    .reperio-form-panel-select {
        position: relative;
        width: 100px;
        height: 300px - 26px;
        overflow: scroll;
        overflow-x: hidden;
        background-color: $unfocused-input;
        border-color: $main-gray;
        border-style: solid;
        border-width: 0 1px 2px 1px;
        //Remove scrollbar
        -ms-overflow-style: none;  // IE 10+
        overflow: -moz-scrollbars-none;  // Firefox
    }
    .reperio-form-panel-select::-webkit-scrollbar {
        display: none;  // Safari and Chrome
    }
    .reperio-form-panel-select:first-child {
        float: left;
        border-left-width: 2px;
    }
    .reperio-form-panel-select:last-child {
        float: right;
        border-right-width: 2px;
    }
    ul {
        list-style-type: none;
        cursor: pointer;
    }
    .reperio-form-panel-select-active {
        background-color: white;
    }
    .reperio-form-panel-select-option-selected {
        font-weight: bold;
    }
}

.vertical-spacer {
    height: 32px;
}

.save-button {
    font-size: 14px !important;
}
.selected-toggle {
    color: $selected !important;
}
.selected-toggle-bar {
    background-color: $selected !important;
}
.disabled-toggle {
    color: $main-gray !important;
}

